[package]
name = "mortal_reminder"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level=3

[profile.dev]
opt-level = 0


[dependencies]
chrono = { version = "0.4.32", features = ["serde"] }
owo-colors = "4.0.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111", features = ["alloc"] }
uuid = { version = "1.7.0", features = ["v4", "serde", "fast-rng"] }
